veiculos/Deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veiculos
  labels:
    app: veiculos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veiculos
  template:
    metadata:
      labels:
        app: veiculos
    spec:
      containers:
      - name: veiculos
        image: veiculos
        ports:
        - containerPort: 8090
