veiculos/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veiculos
  labels:
    app: veiculos
spec:
  rules:
  - host: veiculos.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: veiculos
              port:
                number: 8090
